--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "desafio-univali",
+  "author": {
+    "name": "William Pereira da Conceicao",
+    "email": "dev.pereira2019@gmail.com",
+    "url": "https://willtechcod.com"
+},
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +14,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.5.4",
+    "@hookform/resolvers": "^3.3.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.9.3",
+    "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "immer": "^10.0.2",
+    "lucide-react": "^0.268.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.6",
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.2"
   }
 }
