--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "name": "William Pereira da Conceicao",
     "email": "dev.pereira2019@gmail.com",
     "url": "https://willtechcod.com"
-},
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -48,6 +48,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.2"
   }
